--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="../../favicon.ico">
     <title>Perfume E-Shop</title>
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="cssstyles.css" rel="stylesheet">
+    <link href="https://github.com/nsapoznikova/perfume-eshop/cssstyles.css" rel="stylesheet">
     <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
     <link href="http://getbootstrap.com/examples/dashboard/dashboard.css" rel="stylesheet">
     <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
