--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://nsapoznikova.github.io/perfume-eshop/cssstyles.css" rel="stylesheet">
     <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-    <link href="http://getbootstrap.com/examples/dashboard/dashboard.css" rel="stylesheet">
+    <link href="https://nsapoznikova.github.io/perfume-eshop/dashboard.css" rel="stylesheet">
     <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
     <link rel="stylesheet" href="bootstrap/css/font-awesome.min.css">
 </head>
