--- a/gifts.html
+++ b/gifts.html
@@ -81,7 +81,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand logoNewStyle" href="index.html"><img src="perfume-image-1.png" alt="Los Angeles"></a>
+              <a class="navbar-brand logoNewStyle" href="index.html"><img src="Perfume-image-1.png" alt="Los Angeles"></a>
             </div>
             <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
               <form class="navbar-form navbar-right newFormStyleSecond">
